--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 ## --- BANCO DE DADOS PARA TESTE --- ##
 
 spring.datasource.url=jdbc:mysql://localhost:3306/zenvix_test
-spring.datasource.username=${DB_TEST_USER}
-spring.datasource.password=${DB_TEST_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=M@x281710
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+logging.level.org.springframework.security.web.authentication=DEBUG
